templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  labels:
    app: ingress-default-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: ingress-default-backend
