templates/custom-default-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-default-backend
  labels:
    app.kubernetes.io/name: custom-default-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app.kubernetes.io/name: custom-default-backend
